--- a/.tmux.conf
+++ b/.tmux.conf
@@ -131,3 +131,6 @@ set -g message-bg colour166
 # }
 
 set-option -g default-shell /usr/bin/zsh
+
+# start window numbers at 1 to match keyboard order with tmux window order
+set -g base-index 1
