tmux switch panes as emacs

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,10 +26,15 @@ set -g history-limit 50000
 
 setw -g monitor-activity on
 
-# Shift arrow to switch windows
-bind -n S-Left  previous-window
-bind -n S-Right next-window
+# Alt arrow to switch windows
+bind -n M-Left previous-window
+bind -n M-Right next-window
 
+# Shift arrow to switch panes
+bind -n S-Left  select-pane -L
+bind -n S-Right select-pane -R
+bind -n S-Up  select-pane -U
+bind -n S-Down select-pane -D
 
 ######################
 ### DESIGN CHANGES ###
